[package]
name = "image_previewer"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.28.0"
egui = "0.28.0"
image = "0.25.1"
glob = "0.3.1"
resvg = "0.45.1"
regex = "1.11.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Storage_CloudFilters",
    "Win32_Storage_FileSystem",
    "Win32_Foundation"
]}
